# 6-dof-robot-controller

./: .gitignore  .gitmodules  ADC.cpp  ADC.h  CMakeLists.txt  EXTI.h  GPIO.cpp  GPIO.h  Jenkinsfile  LICENSE  LIS3DH.cpp  LIS3DH.h  MG996R.cpp  MG996R.h  Makefile  PWM.cpp  PWM.h  README.md  SPI_16bit.h  USART.cpp  console.h  main.cpp  main.elf  main.h  main.hex
.github/workflows/: build-pipeline.yml  c-cpp.yml
FreeRTOS/Source/include/: FreeRTOSConfig.h
PERIPHERALS/SYS_CLOCK/: clockconfig.h
PERIPHERALS/TIMER/: Timerconfiguration.h
SENSORS/LIS3DH/: SPI_16bit.cpp
dependencies/: system_stm32f4xx.c
emulation/: robot_config.resc
include/common/: common.h
include/comms/serial/: serial_comms.h
include/comms/serial/events/accel_event/: accel_event.h
include/comms/serial/serial_dump/: serial_dump.h
include/comms/serial/serial_events/: serial_events.h
include/configs/: pinout_config.h
include/drivers/actuators/mg996r_servo/: MG996R.h
include/peripherals/adc/: ADC.h
include/peripherals/sys_clock/: sys_clock.h
include/peripherals/usart/: USART.h
src/: main.cpp
src/comms/serial/: serial_comms.cpp
src/comms/serial/events/accel_event/: accel_event.cpp
src/comms/serial/serial_dump/: serial_dump.cpp
src/comms/serial/serial_events/: serial_events.cpp
src/peripherals/adc/: ADC.cpp
src/peripherals/exti/: EXTI.cpp
src/peripherals/sys_clock/: clockconfig.cpp  sys_clock.cpp
src/peripherals/timer/: Timerconfiguration.cpp
stm32f407_configuration/: STM32F407.ld
stm32f407_configuration/dependencies/: stm32f4xx_it.c  system_stm32f4xx.c
tests/: CMakeLists.txt  test_add.cpp  test_default.cpp
tests/drivers/actuators/mg996r_servo/: test_mg996r.cpp
